Actions
Bug #10099
closedlibfakekernel vpanic() should cast away assfail()
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
We're picking up the kernel's assfail() prototype, so just cast it.
Updated by Electric Monk over 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit a923e7f4befb22c1dcef53db9008f4a97ad15c3c
commit a923e7f4befb22c1dcef53db9008f4a97ad15c3c Author: John Levon <john.levon@joyent.com> Date: 2019-01-24T02:44:07.000Z 10099 libfakekernel vpanic() should cast away assfail() Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions